[package]
name = "yeti"
version = "1.0.0"
authors = ["Maximilian Hils <git@maximilianhils.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.33"
hidapi = "1.2"
windows = "0.19"

[build-dependencies]
windows = "0.19"
